Fixed regionalDashboard CSS issue
- Regional dashboard now resizes if the city name is too long

- Reduced line height

--- a/frontend/src/regionalDashboard.css
+++ b/frontend/src/regionalDashboard.css
@@ -12,7 +12,7 @@
     top: 19.72%;
     bottom: 41.32%;
 
-    height: 561px;
+    min-height: 561px;
     width: 286px;
 
     background: #1D2125;
@@ -28,7 +28,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    line-height: 58px;
+    line-height: 1.5;
     color: #FFFFFF;
     align-self: center;
   }
